[tool.poetry]
name = "house_price"
version = "0.1.0"
description = ""
authors = ["seiya <example@example.com>"]

[tool.poetry.dependencies]
python = "^3.6.9"
jupyter = "^1.0.0"
numpy = "^1.19.1"
pandas = "^1.1.0"
scipy = "^1.5.2"
matplotlib = "^3.3.0"
seaborn = "^0.10.1"
scikit-learn = "^0.23.2"
torch = "^1.6.0"
lightgbm = "^2.3.1"
jupyterlab = "^2.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
start = "jupyter:main"
